--- a/src/eCommerce.Web/Views/_ViewImports.cshtml
+++ b/src/eCommerce.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using eCommerce.Mvc
-@using eCommerce.Mvc.Models
+﻿@using eCommerce.Web
+@using eCommerce.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
