--- a/src/eCommerce.Web/Views/Shared/_Layout.cshtml
+++ b/src/eCommerce.Web/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                     <li><a href="@Url.Action("Index","User")">Home</a></li>
                     <li><a href="#">Sign in</a></li>
                     <li>
-                        <a href="@Url.Action("SignUp","Registration")" onclick="dropdownToggle1(this)">Sign Up</a>
+						<a href="@Url.Action("SignUp","Registration")"">Sign Up</a>
                     </li>
                 </ul>
             </div>
