Registration Part ended

--- a/src/eCommerce.Web/Views/Home/Index.cshtml
+++ b/src/eCommerce.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 <header class="flex">
         <div class="container">
             <h1 class="text-white" style="font-size: 100px;margin-top:200px ; ">Ecommers</h1>
-            <a href="@Url.Action("Index","Product")" class="btn btn-outline-primary" style="margin-top: 50px; font-size:4em;">Get Started</a>
+            <a   href="@Url.Action("SignUp","Registration")" class="btn btn-outline-primary" style="margin-top: 50px; font-size:4em;">Get Started</a>
         </div>
 </header>
 <style>
