--- a/src/eCommerce.Web/Views/Registration/SignUp.cshtml
+++ b/src/eCommerce.Web/Views/Registration/SignUp.cshtml
@@ -1,6 +1,8 @@
-﻿
-@{
+﻿@using eCommerce.Service.Dtos.Users;
 
+@model UserCreationDto
+@{
+    ViewData["Title"] = "Sign Up";
 }
 <section class="vh-100" style="background-color: #eee;">
     <div class="container h-100">
@@ -13,12 +15,12 @@
 
                                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
-                                <form class="mx-1 mx-md-4" asp-controller="Registration" asp-action="DoSignUp" method="post" asp-antiforgery="true" enctype="multipart/form-data">
+                                <form class="mx-1 mx-md-4" asp-conttoler="Registration" asp-action="DoSignUp" method="post" asp-antiforgery="true" enctype="multipart/form-data">
 
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input type="text" id="form3Example1c" class="form-control"  required/>
+                                            <input type="text" id="form3Example1c" class="form-control"  required asp-for="FirstName"/>
                                             <label class="form-label" for="form3Example1c">FirstName</label>
                                         </div>
                                     </div>
@@ -26,49 +28,43 @@
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input type="email" id="form3Example3c" class="form-control" required />
+                                            <input type="text" id="form3Example3c" class="form-control" required asp-for="LastName" />
                                             <label class="form-label" for="form3Example3c">LastName</label>
                                         </div>
                                     </div>
                                      <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                                        <div class="form-outline flex-fill mb-0">
-                                            <input type="email" id="form3Example3c" class="form-control" required />
+                                        <div class="form-outline flex-fill mb-0"> 
+                                            <input type="text" id="form3Example3c" class="form-control" required asp-for="UserName" />
                                             <label class="form-label" for="form3Example3c">UserName</label>
                                         </div>
                                     </div>
                                      <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input type="date" id="form3Example3c" class="form-control" required />
+                                            <input type="date" id="form3Example3c" class="form-control" required asp-for="DateOfBirth" />
                                             <label class="form-label" for="form3Example3c">Date Of Birth</label>
                                         </div>
                                     </div>
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input type="number" id="form3Example3c" class="form-control" required />
+                                            <input type="number" id="form3Example3c" class="form-control" required asp-for="Phone" />
                                             <label class="form-label" for="form3Example3c">Phone</label>
                                         </div>
                                     </div>
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input type="email" id="form3Example3c" class="form-control" required />
+                                            <input type="email" id="form3Example3c" class="form-control" required asp-for="Email" />
                                             <label class="form-label" for="form3Example3c">Email</label>
                                         </div>
                                     </div>
-                                    <div class="d-flex flex-row align-items-center mb-4">
-                                        <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                                        <div class="form-outline flex-fill mb-0">
-                                            <input type="email" id="form3Example3c" class="form-control" required />
-                                            <label class="form-label" for="form3Example3c">Email</label>
-                                        </div>
-                                    </div>
+                                    <input type="hidden" value="0" id="form3Example3c" class="form-control" required asp-for="Balance" />
                                     <div class="d-flex flex-row align-items-center mb-4">
                                         <i class="fas fa-lock fa-lg me-3 fa-fw"></i>
                                         <div class="form-outline flex-fill mb-0">
-                                            <input type="password" id="form3Example4c" class="form-control" />
+                                            <input type="password" id="form3Example4c" class="form-control" asp-for="Password" />
                                             <label class="form-label" for="form3Example4c">Password</label>
                                         </div>
                                     </div>
@@ -81,9 +77,9 @@
                                     </div>
 
                                     <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                                        <button type="submit" class="btn btn-primary btn-lg">Register</button>
+                                      <button type="submit" class="btn btn-primary btn-lg">Register</button>
                                     </div>
-
+                                    <a href="@Url.Action("SignIn", "Registration")">ALready Have Account?</a>
                                 </form>
 
                             </div>
