--- a/src/eCommerce.Web/Views/Shared/_Layout.cshtml
+++ b/src/eCommerce.Web/Views/Shared/_Layout.cshtml
@@ -16,8 +16,8 @@
             </div>
             <div>
                 <ul>
-                    <li><a href="@Url.Action("Index","User")">Home</a></li>
-                    <li><a href="#">Sign in</a></li>
+                    <li><a href="@Url.Action("Index","Home")">Home</a></li>
+                    <li><a href="@Url.Action("SignIn","Registration")">Sign in</a></li>
                     <li>
 						<a href="@Url.Action("SignUp","Registration")"">Sign Up</a>
                     </li>
