--- a/src/eCommerce.Web/Views/User/Feed.cshtml
+++ b/src/eCommerce.Web/Views/User/Feed.cshtml
@@ -14,7 +14,7 @@
             <br />
             <br />
             <br />
-           <a href="@Url.Action("Product","Index")" class="btn btn-primary" style="font-size: 50px">Buy Products</a>
+           <a href="@Url.Action("Index","Product")" class="btn btn-primary" style="font-size: 50px">Buy Products</a>
         </div>
         </div>
 </body>
