--- a/src/eCommerce.Web/Views/Shared/_UserLayout.cshtml
+++ b/src/eCommerce.Web/Views/Shared/_UserLayout.cshtml
@@ -21,7 +21,7 @@
 					<li><a href="#">Products</a></li>
 					<li><a href="#">Chat</a></li>
 					<li>
-						<a href="#" onclick="dropdownToggle1(this)">Profile</a>
+						<a href="@Url.Action("Profile","User")">Profile</a>
 					</li>
 				</ul>
 			</div>
